# MMSA-FET

./: .gitignore  MANIFEST.in  README.md  setup.cfg
.github/workflows/: issues_bot.yml  publish-to-pypi.yml
src/MSA_FET/: __init__.py  __main__.py  dataloader.py  dataset.py  install.py  main.py  mp_logger.py  single.py  utils.py
src/MSA_FET/ASD/: ASD.py  __init__.py  talkNet.py
src/MSA_FET/ASD/model/: __init__.py  talkNetModel.py  talkNet_model.py
src/MSA_FET/ASD/model/faceDetector/s3fd/: __init__.py
src/MSA_FET/ASD/model/face_detector/s3fd/: __init__.py
src/MSA_FET/aligner/: __init__.py  default.py
src/MSA_FET/aligners/: __init__.py  base_aligner.py  wav2vec2.py
src/MSA_FET/example_configs/: aligned.json  bert+opensmile+openface.json  bert.json  glove.json  librosa+face_mesh.json  librosa.json  mediapipe.json  openface.json  opensmile+vggface.json  opensmile.json  roberta.json  wav2vec+holistic.json  wav2vec.json
src/MSA_FET/extractors/: __init__.py  baseExtractor.py
src/MSA_FET/extractors/audio/: librosa.py  opensmile.py  wave2vec.py
src/MSA_FET/extractors/text/: bert.py  glove.py  roberta.py
src/MSA_FET/extractors/video/: mediapipe.py  openface.py  vggface.py
src/MSA_FET/exts/OpenFace/: FeatureExtraction
src/MSA_FET/models/: __init__.py  senet50_ft_dat.py
