[metadata]
name = MMSA-FET
version = 0.1.7
author = THUIAR
description = A Tool for extracting multimodal features from videos.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FlameSky-S/MMSA_FET
project_urls =
    Bug Tracker = https://github.com/FlameSky-S/MMSA_FET/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    torch >= 1.7.0
    mediapipe >= 0.8.8.1
    opencv-contrib-python >= 4.5.4.58
    transformers >= 4.4.0
    opensmile >= 2.2.0
    librosa >= 0.8.1
    ffmpeg-python >= 0.2.0
    numpy >= 1.20.3

[options.packages.find]
where = src