[metadata]
name = MMSA-FET
version = 0.2.9
author = THUIAR
maintainer = FlameSky
description = A Tool for extracting multimodal features from videos.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FlameSky-S/MMSA_FET
keywords = multimodal, sentiment analysis, feature extraction, mosi, mosei
project_urls =
    Documentation = https://github.com/FlameSky-S/MMSA-FET/wiki
    Tracker = https://github.com/FlameSky-S/MMSA_FET/issues
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires = 
    torch >= 1.9.1
    mediapipe >= 0.8.8.1
    opencv-contrib-python >= 4.5.4.58
    transformers >= 4.4.0
    opensmile >= 2.2.0
    librosa >= 0.8.1
    ffmpeg-python >= 0.2.0
    numpy >= 1.20.3
    pandas >= 1.2.5
    tqdm >= 4.62.2
    gdown >= 4.4.0

[options.packages.find]
where = src